--- a/src/components/UI/search/input/Input.module.scss
+++ b/src/components/UI/search/input/Input.module.scss
@@ -4,7 +4,8 @@
   border: 0.1rem solid #E1E3E6;
   justify-content: space-between;
   border-radius: 0.8rem;
-  max-width: 36rem;
+  // max-width: 36rem;
+  background: #FFFFFF;
   width: 100%;
   padding: 1rem 1.6rem;
 
