feat: `Header` component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,10 +21,16 @@ body {
   font-weight: 400;
  }
 
-@font-face {
+ @font-face {
   font-family: 'Roboto';
   src: url(./../fonts/Roboto-Medium.ttf);
   font-weight: 600;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url(./../fonts/Roboto-Bold.ttf);
+  font-weight: 700;
 }
 
  @font-face {
