feat: `Footer` component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,8 @@ body {
   overflow-x: hidden;
   font-size: 10px;
   background: #F5F5F5;
+  display: flex;
+  flex-direction: column;
 }
 
 @font-face {
