--- a/src/components/UI/search/input/Input.module.scss
+++ b/src/components/UI/search/input/Input.module.scss
@@ -7,6 +7,7 @@
   background: #FFFFFF;
   width: 100%;
   padding: 1rem 1.6rem;
+  margin-bottom: 2rem;
 
   &:focus-within{
     border-color: #FF5500;
