--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,13 @@ body {
   flex-direction: column;
 }
 
+.container{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  margin-top: 10.8rem;
+}
+
 @font-face {
   font-family: 'Roboto';
   src: url(./../fonts/Roboto-Regular.ttf);
