--- a/src/components/filter/Filter.module.scss
+++ b/src/components/filter/Filter.module.scss
@@ -1,5 +1,5 @@
 .aside {
-  margin: 10.8rem 2.3rem 2.4rem 3.2rem;
+  margin: 0 2.3rem 2.4rem 3.2rem;
   display: flex;
   flex-grow: 1;
   width: 40.8rem;
