refactor: made main page loyout fixed

--- a/src/components/filter/Filter.module.scss
+++ b/src/components/filter/Filter.module.scss
@@ -1,7 +1,8 @@
 .aside {
-  margin-right: 2.3rem;
+  height: 84rem;
   display: flex;
   flex-grow: 1;
+  position: fixed;
   width: 40.8rem;
   padding: 2.4rem;
   flex-direction: column;
