--- a/src/components/main/Main.module.scss
+++ b/src/components/main/Main.module.scss
@@ -1,10 +1,13 @@
 .main {
   display: flex;
-  width: 142rem;
-  height: 100%;
-  margin: 0 3.3rem 2.4rem 0;
+  max-width: 142.4rem;
+  // position: relative;
+  margin-left: 43.1rem;
+  margin-bottom: 2.4rem;
+  padding-bottom: 230rem;
   flex-direction: column;
   align-items: flex-start;
   flex-shrink: 0;
   flex-grow: 1;
+  gap: 1.6rem;
 }
